@@ -54,10 +54,10 @@ OS cung cấp:
 ```
 ┌─────────────────────────────────────────────────────────┐
 │                  USER SPACE                             │
-│  ┌──────────┐  ┌──────────┐  ┌──────────┐             │
-│  │  App 1   │  │  App 2   │  │  App 3   │             │
-│  │ (Chrome) │  │ (Java)   │  │ (vim)    │             │
-│  └──────────┘  └──────────┘  └──────────┘             │
+│  ┌──────────┐  ┌──────────┐  ┌──────────┐               │
+│  │  App 1   │  │  App 2   │  │  App 3   │               │
+│  │ (Chrome) │  │ (Java)   │  │ (vim)    │               │
+│  └──────────┘  └──────────┘  └──────────┘               │
 │  ┌────────────────────────────────────────────────────┐ │
 │  │           Standard Libraries (glibc, JVM...)       │ │
 │  └────────────────────────────────────────────────────┘ │
@@ -65,10 +65,10 @@ OS cung cấp:
 │                System Call Interface                    │  ← boundary
 ├─────────────────────────────────────────────────────────┤
 │                  KERNEL SPACE                           │
-│  ┌─────────┐ ┌──────────┐ ┌──────────┐ ┌───────────┐  │
-│  │ Process │ │  Memory  │ │   File   │ │  Network  │  │
-│  │ Sched.  │ │  Mgmt    │ │  System  │ │  Stack    │  │
-│  └─────────┘ └──────────┘ └──────────┘ └───────────┘  │
+│  ┌─────────┐ ┌──────────┐ ┌──────────┐ ┌───────────┐    │
+│  │ Process │ │  Memory  │ │   File   │ │  Network  │    │
+│  │ Sched.  │ │  Mgmt    │ │  System  │ │  Stack    │    │
+│  └─────────┘ └──────────┘ └──────────┘ └───────────┘    │
 │  ┌────────────────────────────────────────────────────┐ │
 │  │              Device Drivers                        │ │
 │  └────────────────────────────────────────────────────┘ │
@@ -2088,4 +2088,1011 @@ sysctl -w vm.dirty_ratio=15
 
 ---
 
-*Học theo thứ tự: OSI → Process/Thread → Scheduling → Memory/Paging → Syscalls → File System → Security*
+# 14. Plain-English Guide — Basics for Every Developer
+
+## 14.1 What Does an OS Actually Do? (Simple Terms)
+
+```
+Think of the OS as the "manager" of a computer.
+Your app is like an employee who needs desk space, tools, and shared equipment.
+The OS manager:
+
+  1. PROCESS MANAGEMENT — giving each program its own workspace
+     "I'll give your program a PID (employee ID), some CPU time to work,
+      and I'll make sure it doesn't mess with another program's work."
+
+  2. MEMORY MANAGEMENT — managing the RAM (desk space)
+     "You get 512MB of virtual desk space. I'll map it to real physical RAM
+      as you need it. When you're done, I take it back and give it to someone else."
+
+  3. FILE SYSTEM — organizing the hard drive (filing cabinet)
+     "I keep an index (inode) for every file: who owns it, how big it is,
+      where the actual bytes live on disk. You just say 'open("data.txt")' and I handle the rest."
+
+  4. DEVICE MANAGEMENT — translating for hardware
+     "Your app doesn't know if you have an SSD or HDD. I speak the hardware
+      language so you don't have to."
+
+  5. SECURITY — walls between programs
+     "Each program is isolated. Program A cannot read Program B's memory.
+      Users have permissions: can they read this file? execute that program?"
+```
+
+## 14.2 Process vs Thread — Dead Simple
+
+```
+PROCESS = a running program with its OWN isolated world
+  Imagine: a separate room for each program
+  - Own memory (a room's worth of space) — other programs can't enter
+  - Own files open, own variables
+  - Slow to create (building a new room takes time)
+  - If it crashes: only that room is damaged, others are fine
+  - Communication: pass notes under the door (IPC)
+  Examples: Chrome has 1 process per tab, your Java app = 1 process
+
+THREAD = a worker inside that process's room
+  Imagine: multiple workers in the same room
+  - SHARED memory (same room, everyone sees the same whiteboard)
+  - Each worker has their own to-do list (stack) and pen position (registers)
+  - Fast to create (just hire another worker for the same room)
+  - If one worker crashes badly: can take down the whole room
+  - Communication: shout across the room (shared variables — but be careful!)
+  Examples: Java server handles each HTTP request in a thread,
+            your Spring app's thread pool = workers in the process room
+
+ANALOGY TABLE:
+  ┌──────────────────────┬─────────────────────┬─────────────────────┐
+  │                      │ PROCESS             │ THREAD              │
+  ├──────────────────────┼─────────────────────┼─────────────────────┤
+  │ Memory               │ Separate (isolated) │ Shared (same heap)  │
+  │ Speed to create      │ Slow (~1ms)         │ Fast (~0.1ms)       │
+  │ Crash isolation      │ Yes (only itself)   │ No (kills process)  │
+  │ Communication        │ IPC (pipes,sockets) │ Shared memory       │
+  │ Context switch cost  │ High (TLB flush)    │ Low (same page table│
+  │ Java example         │ java -jar app.jar   │ Thread pool workers │
+  └──────────────────────┴─────────────────────┴─────────────────────┘
+
+WHEN TO USE WHAT:
+  Need total isolation (security, stability):   → Separate processes
+  Need to share data efficiently, speed:        → Threads
+  In practice (Java/Spring):                    → Threads (1 JVM process, many threads)
+```
+
+## 14.3 What RAM Does — Plain English
+
+```
+RAM = Random Access Memory = your computer's "working desk"
+  (Hard disk = filing cabinet you pull files from, slow)
+  (RAM = desk where you put things you're actively working on, fast)
+
+WHAT HAPPENS WHEN YOU RUN A PROGRAM:
+  1. OS reads executable from disk → copies to RAM
+  2. OS allocates RAM for the program's variables (heap, stack)
+  3. CPU reads instructions and data FROM RAM (not disk — too slow!)
+  4. Program runs; creates/modifies data in RAM
+  5. When program exits: OS reclaims that RAM
+
+WHY RAM SIZE MATTERS:
+  More RAM = more programs can run at the same time (more desk space)
+  Not enough RAM → OS uses SWAP (part of hard disk used as fake RAM)
+  SWAP is ~100x slower than RAM → performance degrades massively
+  "Out of memory" = truly no RAM left, OS kills processes (OOM Killer)
+
+HOW YOUR JAVA APP USES RAM:
+  JVM Heap:     where your objects live (ArrayList, HashMap, etc.)
+                controlled by -Xmx (max) and -Xms (start)
+  JVM Stack:    each thread has a stack for method call frames
+                controlled by -Xss (per thread, usually 256KB-1MB)
+  Metaspace:    class definitions, JIT compiled code
+  Off-heap:     NIO ByteBuffers, Netty direct memory, JVM internal
+
+VIRTUAL vs PHYSICAL RAM:
+  Virtual = what your program thinks it has (can be bigger than physical RAM)
+  Physical = actual RAM chips
+  OS maps virtual → physical on demand
+  Java -Xmx4g: your JVM can USE UP TO 4GB virtual, but may use less physical
+```
+
+## 14.4 How Files Are Organized — Plain English
+
+```
+FILESYSTEM = a database for your files
+
+THREE LAYERS:
+  1. FILE NAME (what you see):
+     /home/khang/project/app.jar
+     This is just a label in a directory
+
+  2. INODE (the file's ID card, hidden):
+     inode #48291: owner=khang, size=15MB, permissions=rwxr-xr-x,
+                   modified=2025-05-19, blocks=[4521,4522,4523...]
+     Inode does NOT contain the filename!
+
+  3. DATA BLOCKS (actual content on disk):
+     The bytes of your file, scattered across disk
+
+DIRECTORY = a lookup table:
+  /home/khang/project/
+     "app.jar"   → inode #48291
+     "config.yml"→ inode #48299
+     "logs/"     → inode #48305 (directory inode!)
+
+WHEN YOU OPEN A FILE:
+  open("/home/khang/app.jar")
+  1. OS looks up /home  → inode → finds home directory data
+  2. Looks up khang      → inode → finds khang directory data
+  3. Looks up app.jar    → inode #48291
+  4. Reads inode #48291 → finds data blocks on disk
+  5. Returns file descriptor (fd=3) — integer for your code to use
+  6. All subsequent read(3,...) use this fd
+
+PERMISSIONS:
+  Every file has: owner, group, others
+  Each has: r (read=4), w (write=2), x (execute=1)
+
+  -rwxr-xr-x  1  khang  devs  15360  app.jar
+   └───────┘       └──┘  └──┘
+   permissions     user  group
+
+  r w x  |  r - x  |  r - x
+  user   |  group  |  others
+  7      |  5      |  5      → chmod 755
+
+  0 = --- no permissions
+  1 = --x execute only
+  2 = -w- write only
+  3 = -wx write + execute
+  4 = r-- read only
+  5 = r-x read + execute
+  6 = rw- read + write
+  7 = rwx full access
+```
+
+---
+
+# 15. Practical Developer — Inspecting the OS
+
+## 15.1 Viewing Running Processes
+
+```bash
+# ── PS: SNAPSHOT of processes ──
+ps aux                    # all processes, BSD style (a=all, u=user format, x=no tty)
+ps aux | grep java        # find java processes
+ps aux | grep -v grep | grep myapp  # find app (exclude grep itself)
+ps -ef                    # all processes, full format (shows PPID)
+ps -p 1234                # specific PID
+ps -u khang               # processes by user
+ps --sort=-%mem           # sort by memory descending
+ps --sort=-%cpu           # sort by CPU descending
+
+# READING ps aux OUTPUT:
+# USER     PID  %CPU  %MEM    VSZ    RSS  TTY  STAT  START  TIME  COMMAND
+# khang   1234   5.2   8.1  3621948 665744 ?   Sl   10:00  2:30  java -jar app.jar
+#
+# VSZ  = Virtual memory size (total virtual address space — includes shared libs, mmap)
+# RSS  = Resident Set Size (actual RAM used RIGHT NOW — this is what you care about!)
+# %MEM = RSS / total RAM × 100
+# STAT = process state:
+#   S = sleeping (waiting for I/O)   ← most processes
+#   R = running (on CPU)
+#   D = uninterruptible sleep (I/O)  ← can't be killed! disk I/O in progress
+#   Z = zombie (finished, parent hasn't called wait())
+#   T = stopped (by SIGSTOP or job control)
+#   s = session leader
+#   l = multi-threaded
+#   < = high priority (negative nice)
+#   N = low priority (positive nice)
+
+# ── TOP: LIVE view ──
+top                       # live updating process list
+top -b -n 1               # batch mode (good for scripts)
+top -p 1234               # watch specific PID
+top -u khang              # watch user's processes
+
+# INSIDE top — keyboard shortcuts:
+# P = sort by CPU (default)
+# M = sort by memory
+# k = kill a process (enter PID, then signal)
+# r = renice (change priority)
+# 1 = show per-CPU stats
+# H = show threads (not just processes)
+# q = quit
+
+# ── HTOP: BETTER top (install separately) ──
+htop                      # interactive, colors, mouse support
+# F6 = sort, F4 = filter, F3 = search, F2 = setup, F9 = kill
+
+# ── READING TOP OUTPUT ──
+# top - 14:30:01 up 5 days, 3:22,  2 users,  load average: 0.52, 0.58, 0.65
+#   ↑time    ↑uptime             ↑users    ↑1min  ↑5min  ↑15min
+#
+# Tasks: 195 total,   1 running, 194 sleeping,   0 stopped,   0 zombie
+#
+# %Cpu(s):  5.3 us,  1.2 sy,  0.0 ni, 92.8 id,  0.4 wa,  0.0 hi,  0.3 si
+#   us = user space processes
+#   sy = kernel/system
+#   id = idle (100-id = total usage)
+#   wa = I/O wait (HIGH = disk bottleneck!)
+#   hi = hardware interrupts
+#   si = software interrupts
+#
+# MiB Mem:  16384.0 total,   2048.0 free,  10240.0 used,   4096.0 buff/cache
+# MiB Swap:  8192.0 total,   7800.0 free,    392.0 used.   5632.0 avail Mem
+#              ↑                                ↑
+#         free physical RAM            recommended: use this number for "available"
+
+# ── FINDING PROCESS BY NAME/PORT ──
+pgrep -l java             # PIDs + names matching "java"
+pgrep -a java             # PIDs + full command line
+pidof java                # just the PID(s)
+lsof -i :8080             # which process is using port 8080?
+ss -tlnp | grep 8080      # same, more modern
+fuser 8080/tcp            # PID using port 8080
+
+# ── PROCESS TREE ──
+pstree                    # tree of all processes
+pstree -p 1234            # tree starting from PID 1234
+pstree -u khang           # tree for user
+```
+
+## 15.2 CPU & Memory Usage Monitoring
+
+```bash
+# ── MEMORY DEEP DIVE ──
+free -h                   # human-readable memory overview
+#               total    used    free  shared  buff/cache  available
+# Mem:           15Gi   9.8Gi   1.2Gi  1.1Gi       4.0Gi      4.5Gi
+#                       └──── programs use    ──────┘        └── for new programs
+# Swap:          7.8Gi   0.3Gi   7.5Gi
+# NOTE: "available" is more useful than "free"
+#   free      = truly unused RAM
+#   available = free + buff/cache (OS can reclaim buff/cache when needed)
+
+watch -n 1 free -h        # refresh every 1 second
+
+cat /proc/meminfo         # detailed breakdown
+# MemTotal       : total physical RAM
+# MemFree        : completely free (not available = free+reclaimable)
+# MemAvailable   : estimated available for new allocations
+# Cached         : disk page cache (good! OS uses idle RAM as cache)
+# SwapUsed       : ALERT if this is high → system is swapping!
+
+# SPECIFIC PROCESS MEMORY:
+cat /proc/1234/status     # memory, threads, signals for PID 1234
+# VmRSS: current physical RAM used by process
+# VmPeak: peak virtual memory
+# Threads: number of threads
+
+cat /proc/1234/smaps      # detailed memory map (every region!)
+pmap -x 1234              # memory map summary per region
+pmap -x 1234 | tail -1    # total line (RSS = actual RAM used)
+
+# ── CPU MONITORING ──
+mpstat 1                  # per-second CPU stats
+mpstat -P ALL 1           # per-CPU-core stats
+
+# Load average interpretation:
+uptime
+# 14:30:01 up 5 days,  load average: 2.50, 1.80, 1.20
+#                              ↑1min  ↑5min  ↑15min
+#
+# On a 4-core machine:
+# load = 1.0  →  25% utilized (1 of 4 cores busy)
+# load = 4.0  → 100% utilized (all 4 cores fully busy)
+# load = 8.0  → 200%! processes queuing, degraded performance
+# Rule: load average > num_cores → system is OVERLOADED
+
+nproc                     # number of CPU cores
+cat /proc/cpuinfo | grep "processor" | wc -l  # same
+
+# ── DISK I/O ──
+iostat -x 1               # extended I/O stats (per device)
+# Device  r/s   w/s  rMB/s  wMB/s  await  %util
+# sda     5.2  12.1   0.20   0.45    1.2   22.3
+# ↑       ↑                           ↑     ↑
+# device  reads/sec              avg wait  utilization
+# %util > 80% → disk is bottleneck!
+# await > 10ms → slow disk response
+
+iotop                     # live I/O usage per process (like top for disk)
+iotop -o                  # only show processes doing I/O
+
+# ── COMBINED VIEW ──
+vmstat 1                  # compact CPU + memory + I/O + swap
+# procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
+# r  b   swpd   free  buff  cache   si   so    bi    bo   in   cs us sy id wa st
+# 2  0    392  1024  128  4096     0    0    12    45  280  510 12  3 83  2  0
+#
+# r  = processes waiting for CPU (runnable queue) — HIGH = CPU bottleneck
+# b  = processes in uninterruptible sleep (I/O wait) — HIGH = I/O bottleneck
+# si/so = swap in/out (bytes/sec) — NON-ZERO = MEMORY PRESSURE!
+# wa = I/O wait % — HIGH = disk bottleneck
+# cs = context switches per second
+
+# ── NETWORK ──
+ss -tuln                  # listening TCP/UDP sockets
+ss -tp                    # TCP connections with process names
+ss -s                     # summary statistics
+# State  Recv-Q  Send-Q  Local Address  Peer Address  Process
+# LISTEN 0       128     0.0.0.0:8080   0.0.0.0:*     users:(("java",pid=1234))
+# Recv-Q > 0 on LISTEN = connection backlog filling up (overloaded server!)
+# Recv-Q > 0 on ESTABLISHED = app not reading data fast enough
+```
+
+## 15.3 File Permissions — Read, Set, Diagnose
+
+```bash
+# ── READING PERMISSIONS ──
+ls -la /var/log/
+# -rw-r--r-- 1 root   adm    12345 May 19 10:00 syslog
+# drwxr-xr-x 2 root   root    4096 May 19 10:00 nginx/
+# lrwxrwxrwx 1 root   root       4 Jan 01 00:00 wtmp -> /dev/null
+# ↑           ↑ ↑      ↑
+# type+perms  links owner group
+#
+# First char: - = regular file, d = directory, l = symlink, c = char device
+# Permissions:  rwx rwx rwx
+#               │   │   └── others (everyone else)
+#               │   └────── group
+#               └────────── owner (user)
+
+stat filename             # full details: permissions, timestamps, inode, size
+
+# ── CHANGING PERMISSIONS ──
+chmod 755 script.sh       # rwxr-xr-x (owner: full, group: r+x, others: r+x)
+chmod 644 config.yml      # rw-r--r-- (owner: r+w, group: r, others: r)
+chmod 600 secret.key      # rw------- (owner: r+w only — good for SSH keys!)
+chmod 777 public.txt      # EVERYONE can read/write/execute — AVOID!
+
+# Symbolic mode (clearer intent):
+chmod u+x script.sh       # add execute for user (owner)
+chmod g-w file.txt        # remove write for group
+chmod o= file.txt         # remove ALL permissions for others
+chmod a+r file.txt        # add read for ALL (a = all)
+chmod u=rwx,g=rx,o=r file # set explicitly
+
+# Recursive:
+chmod -R 755 /var/www/html    # entire directory tree
+
+# ── CHANGING OWNERSHIP ──
+chown khang file.txt          # change owner
+chown khang:devs file.txt     # change owner AND group
+chown -R khang:devs /project  # recursive
+
+# ── CHECKING EFFECTIVE PERMISSIONS ──
+id                            # your UID, GID, and group memberships
+# uid=1000(khang) gid=1000(khang) groups=1000(khang),4(adm),27(sudo),1001(devs)
+
+whoami                        # just your username
+sudo -l                       # what can you sudo?
+
+# Can user X access file Y?
+namei -l /path/to/file        # show permissions for every component of path!
+# f: /var/log/nginx/access.log
+# d  / (root)         drwxr-xr-x root root
+# d  var              drwxr-xr-x root root
+# d  log              drwxr-xr-x root root
+# d  nginx            drwx------ root adm   ← group adm can enter, others cannot!
+# -  access.log       -rw-r----- root adm   ← only root+adm can read
+
+# ── SPECIAL PERMISSIONS ──
+# SUID (Set User ID): run file as owner, not executor
+# -rwsr-xr-x root root /usr/bin/passwd   ← 's' instead of 'x' in owner
+# When you run passwd, it runs as root (to write /etc/shadow)
+chmod u+s program             # set SUID
+
+# SGID (Set Group ID): run as file's group
+chmod g+s dir/                # new files inherit directory's group
+
+# Sticky bit: only owner can delete files in directory
+# drwxrwxrwt root root /tmp   ← 't' at end
+# Anyone can write to /tmp, but only YOU can delete YOUR files
+chmod +t /shared-dir          # set sticky bit
+
+# UMASK: default permissions for new files
+umask                         # show current (e.g., 0022)
+# file default: 0666 - umask = 0644 (no execute for new files)
+# dir default:  0777 - umask = 0755
+
+# ── FILE PERMISSION TROUBLESHOOTING ──
+# "Permission denied" — systematic debugging:
+ls -la path/to/file           # check file permissions
+ls -la path/to/               # check directory permissions
+ls -la path/                  # check parent directory
+namei -l path/to/file         # check ENTIRE path at once!
+id                            # am I in the right group?
+sudo -l                       # can I sudo?
+```
+
+---
+
+# 16. Performance Diagnosis — OS-Level Issues
+
+## 16.1 Too Many Processes / Threads
+
+```bash
+# SYMPTOM: system slow, load average high, many processes
+
+# ── DIAGNOSE ──
+ps aux --sort=-%cpu | head -20    # top CPU consumers
+ps aux --sort=-%mem | head -20    # top memory consumers
+
+# Count processes/threads:
+ps aux | wc -l                    # total process count (minus header)
+ps -eLf | wc -l                   # total THREAD count (all threads of all processes)
+cat /proc/sys/kernel/threads-max  # system maximum threads
+cat /proc/sys/kernel/pid_max      # system maximum PIDs
+
+# Java thread count:
+ps -p 1234 -L | wc -l             # threads of Java process 1234
+jstack 1234 | grep "java.lang.Thread.State" | wc -l  # Java threads by stack dump
+# Or: jcmd 1234 Thread.print | grep tid= | wc -l
+
+# Find zombie processes:
+ps aux | awk '$8 == "Z"'          # state Z = zombie
+# Zombie processes don't use CPU/memory but waste PID table slots
+# Fix: parent must call wait(); or restart the parent process
+
+# ── SYMPTOMS & CAUSES ──
+# Load average >> nproc (cores):
+#   Too many CPU-bound threads competing for CPU time
+#   → each thread gets tiny time slice → frequent context switches
+#   → context switch overhead > actual work!
+#   Fix: reduce thread pool size to match # of CPU cores
+#        for CPU-bound: threads ≈ nproc
+#        for I/O-bound: threads can be more (most time waiting)
+
+# High %sys CPU:
+#   Many syscalls per second (too many threads doing I/O)
+#   Many context switches (cs column in vmstat)
+#   Fix: reduce threads, use async I/O, batch operations
+
+vmstat 1 | awk '{print $12, "cs/s"}'  # watch context switches per second
+# < 1000/s   = normal
+# 10000/s    = moderate (OK for busy server)
+# 100000+/s  = very high, investigate!
+
+# ── THREAD POOL TUNING (Java) ──
+# CPU-bound work:
+int threads = Runtime.getRuntime().availableProcessors();
+// → use exactly nproc threads, no more!
+
+# I/O-bound work:
+// Little's Law: threads = (avg_latency_ms / 1000) × target_throughput_rps
+// Example: 100ms latency, want 500 req/sec:
+// threads = 0.1 × 500 = 50 threads
+
+# Spring Boot threadpool (Tomcat):
+server.tomcat.threads.max=200     # default 200 (usually too many for CPU-bound!)
+server.tomcat.threads.min-spare=10
+```
+
+## 16.2 Insufficient Memory — OOM and Swap
+
+```bash
+# ── DETECTING MEMORY PRESSURE ──
+free -h                           # check available memory
+cat /proc/meminfo | grep -E "MemAvailable|SwapUsed|Dirty"
+vmstat 1 | awk '{print $7, $8}'  # si/so = swap in/out (should be 0!)
+
+# OOM Killer triggered:
+dmesg | grep -i "oom\|out of memory\|killed process"
+grep -i "oom\|kill" /var/log/syslog | tail -20
+journalctl -k | grep -i oom
+
+# OOM Killer output looks like:
+# [1234.567] Out of memory: Kill process 5678 (java) score 892 or sacrifice child
+# [1234.568] Killed process 5678 (java) total-vm:4194304kB, anon-rss:3145728kB
+
+# OOM score (0-1000, higher = more likely to be killed):
+cat /proc/1234/oom_score          # current score (computed by kernel)
+cat /proc/1234/oom_score_adj      # adjustment (-1000 to 1000)
+# Protect critical process from OOM killer:
+echo -1000 > /proc/1234/oom_score_adj  # very protected (only root can do this)
+echo 500 > /proc/1234/oom_score_adj    # more likely to be killed (good for bg tasks)
+
+# ── JAVA HEAP ANALYSIS ──
+# JVM out of memory:
+# java.lang.OutOfMemoryError: Java heap space
+# → app using more heap than -Xmx allows
+# java.lang.OutOfMemoryError: GC overhead limit exceeded
+# → JVM spending > 98% time in GC with < 2% progress
+# java.lang.OutOfMemoryError: Metaspace
+# → too many classes loaded (class loader leak?)
+
+# Check Java process memory:
+jmap -heap 1234               # heap summary (Eden, Survivor, Old gen sizes)
+jstat -gcutil 1234 1000       # GC stats every 1 second
+# S0  S1   E   O    M    CCS  YGC YGCT FGC FGCT   GCT
+# 0.0 98.5 82.0 56.3 96.7 88.5  89  0.532   3  0.289   0.821
+# E=Eden, O=Old, YGC=young GC count, FGC=full GC count
+# High FGC (full GC) → memory pressure!
+# Old gen consistently high → increase -Xmx or fix memory leak
+
+# Memory leak detection:
+jmap -histo:live 1234 | head -30    # object histogram (find leak candidates)
+jcmd 1234 GC.heap_dump /tmp/heap.hprof  # full heap dump for analysis
+# Analyze with: Eclipse MAT, IntelliJ memory profiler, jhat
+
+# Common Java memory settings:
+java -Xms512m -Xmx2g \              # heap: start 512MB, max 2GB
+     -XX:MetaspaceSize=256m \        # initial metaspace
+     -XX:MaxMetaspaceSize=512m \     # max metaspace
+     -XX:+UseG1GC \                  # G1 garbage collector (Java 9+ default)
+     -XX:MaxGCPauseMillis=200 \      # target GC pause < 200ms
+     -Xlog:gc*:gc.log                # GC logging to file
+     -jar app.jar
+
+# ── SWAP ISSUES ──
+# Swap usage means system is OUT of RAM
+swapon --show                       # show swap devices
+cat /proc/swaps
+
+# Find which processes are using swap:
+for pid in /proc/[0-9]*; do
+    proc_name=$(cat $pid/comm 2>/dev/null)
+    swap=$(grep VmSwap $pid/status 2>/dev/null | awk '{print $2}')
+    if [ ! -z "$swap" ] && [ "$swap" -gt 0 ]; then
+        echo "$swap kB - $proc_name ($(basename $pid))"
+    fi
+done | sort -rn | head -20
+
+# Reduce swap usage:
+sysctl vm.swappiness=10     # 0=avoid swap, 100=aggressive swap
+# Default=60, for servers set to 1-10
+# vm.swappiness=0 doesn't mean NO swap, means "swap only when truly necessary"
+```
+
+## 16.3 CPU Bottlenecks
+
+```bash
+# ── IDENTIFY CPU BOTTLENECK ──
+# High %us (user CPU): your application code is CPU-intensive
+# High %sy (system CPU): too many syscalls or context switches
+# High %wa (I/O wait): blocked waiting for disk/network
+# High %si (software interrupt): network packet processing
+
+# Profile which code is CPU-intensive:
+# Linux perf (most powerful):
+perf top                          # live CPU hotspot (like top but for functions)
+perf record -g -p 1234 sleep 30  # sample for 30 seconds
+perf report                       # show call graph
+
+# Java CPU profiling:
+jstack 1234                       # thread dump (find threads consuming CPU)
+# Look for threads in RUNNABLE state with CPU-intensive stack traces
+
+async-profiler -d 30 -f /tmp/profile.html 1234  # flamegraph for Java
+# https://github.com/async-profiler/async-profiler
+
+# CPU frequency / throttling:
+cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq   # current frequency
+cat /proc/cpuinfo | grep "MHz"    # per-core frequency
+# If CPU is throttling below rated speed → thermal throttling?
+
+# Check CPU temperature:
+sensors                           # if lm-sensors installed
+cat /sys/class/thermal/thermal_zone*/temp  # raw values (divide by 1000)
+
+# ── CONTEXT SWITCH ANALYSIS ──
+# High context switches = many threads competing, short time slices
+pidstat -w 1                      # context switches per process per second
+# Voluntary: thread willingly gives up CPU (waiting for I/O, sleep)
+# Involuntary: scheduler preempted thread (time slice expired, higher priority ran)
+# High involuntary = too many runnable threads (reduce threads!)
+
+# ── CACHE MISS ANALYSIS ──
+perf stat -e cache-misses,cache-references ./program
+# cache-miss ratio = cache-misses / cache-references
+# > 10% = significant, > 50% = serious cache miss problem
+# Causes: large data structures, random memory access patterns
+```
+
+## 16.4 I/O and Disk Bottlenecks
+
+```bash
+# ── DISK I/O DIAGNOSIS ──
+iostat -x 1
+# key columns:
+# %util  → utilization (close to 100% = saturated!)
+# await  → average I/O wait time in milliseconds
+#          < 1ms   = excellent (NVMe SSD)
+#          < 10ms  = good (SATA SSD)
+#          < 50ms  = acceptable (HDD)
+#          > 100ms = PROBLEM!
+# r/s, w/s → reads/writes per second
+# rMB/s, wMB/s → throughput
+
+iotop -oa                         # cumulative I/O per process since start
+lsof +D /path/to/dir              # which processes have files open in directory
+
+# Check if a process is I/O bound:
+ps aux | awk '$8 == "D"'          # state D = uninterruptible I/O sleep
+
+# File system cache statistics:
+vmstat -d                         # disk statistics
+cat /proc/sys/vm/dirty_ratio      # max % of RAM for dirty page cache
+cat /proc/sys/vm/dirty_background_ratio  # when to start writing dirty pages
+
+# ── NETWORK I/O ──
+# Socket buffer queues full?
+ss -tn | awk '{print $2}' | sort -rn | head    # Recv-Q values
+# Recv-Q > 0 on ESTABLISHED connections: app not consuming data fast enough!
+
+nethogs                           # bandwidth per process in real-time
+iftop -i eth0                     # bandwidth per connection
+
+# Check for connection errors:
+ss -s
+# Retrans: retransmitted packets → packet loss?
+# estab: established connections
+# closed: recently closed
+```
+
+---
+
+# 17. How OS Behavior Affects Application Performance
+
+## 17.1 OS Impact on Java/Spring Applications
+
+```
+SCENARIO 1: Spring Boot app with 200 Tomcat threads, 4-core server
+
+OS view:
+  200 threads created in JVM process
+  OS kernel thread per each Java thread (1:1 mapping, modern JVM)
+  200 LWP (Light Weight Processes) registered with scheduler
+  Scheduler runs each for ~4ms time slice
+
+What happens under heavy load:
+  All 200 threads RUNNABLE (all handling requests simultaneously)
+  CPU has only 4 cores
+  200/4 = 50 threads per core must take turns
+  Each gets ~4ms, then context switch
+  Context switch: ~5-10µs overhead
+  200 threads × 5µs = 1ms of overhead per 4ms slice = 25% overhead!
+  Plus: cache pollution, TLB flushes
+
+Observation:
+  vmstat cs column jumps to 50,000+ per second
+  %sys CPU climbs (kernel doing context switch work)
+  Throughput plateaus or degrades despite more load
+
+Fix:
+  Reduce thread count to 4×(target_concurrency_factor)
+  Use async/reactive (Spring WebFlux + Netty):
+    1 thread per CPU core
+    Non-blocking I/O: thread never sleeps waiting for I/O
+    → 4 threads serving thousands of concurrent requests!
+
+SCENARIO 2: JVM Garbage Collection and OS
+
+Major GC (Stop-The-World):
+  All JVM application threads STOPPED
+  GC thread runs alone
+  OS view: all application threads go from RUNNABLE → WAITING
+  Request latency spikes for duration of GC pause (50ms to 10+ seconds!)
+
+OS-level GC impact:
+  GC may generate enormous number of page faults if heap is swapped out
+  Large heap + compaction = massive memory bandwidth usage
+  Other processes on same machine get extra CPU during GC (then lose it)
+
+Diagnosis:
+  jstat -gcutil 1234 1000       # watch GC events in real time
+  Prometheus: jvm_gc_pause_seconds_max > 500ms → alert!
+  journalctl -u myapp | grep "GC"
+
+Fix:
+  Increase heap (-Xmx) to avoid frequent GCs
+  Use G1GC or ZGC (concurrent GC — much shorter pauses):
+    -XX:+UseZGC               # ZGC: pauses < 1ms! (Java 15+ production ready)
+    -XX:+UseG1GC              # G1: good balance
+  Set GC pause target: -XX:MaxGCPauseMillis=200
+
+SCENARIO 3: File Descriptor Exhaustion
+
+Linux default max open files per process: 1024
+Web server with 10,000 connections:
+  Each socket = 1 file descriptor
+  10,000 connections → need 10,000+ file descriptors
+  Beyond limit → accept() fails: "Too many open files"
+  nginx/app crashes accepting new connections!
+
+Check:
+  lsof -p 1234 | wc -l          # count open FDs for process
+  cat /proc/1234/limits         # per-process limits
+  cat /proc/sys/fs/file-max     # system-wide max
+
+Fix:
+  # Increase for current session:
+  ulimit -n 65536
+  # Permanent: /etc/security/limits.conf
+  myapp soft nofile 65536
+  myapp hard nofile 65536
+  # System-wide: /etc/sysctl.conf
+  fs.file-max = 1000000
+```
+
+## 17.2 OS Impact on Node.js / Python / Go
+
+```
+NODE.JS (single-threaded event loop):
+  OS view: Node.js = 1 main thread + libuv thread pool (default 4 threads)
+  Main thread: runs JS code, event loop, non-blocking I/O callbacks
+  Thread pool: for blocking I/O (fs.readFile with no async, DNS, crypto)
+
+  Performance impact:
+    CPU-bound JS code blocks the event loop → ALL requests stall!
+    File system calls go through thread pool → max 4 concurrent
+    Network I/O: async via OS epoll → no thread needed!
+
+  Diagnosis:
+    event loop lag > 100ms → CPU-bound code blocking event loop
+    node --prof app.js → CPU profile
+    UV_THREADPOOL_SIZE=8 node app.js → increase thread pool for heavy fs work
+
+PYTHON (GIL — Global Interpreter Lock):
+  OS view: Python process creates OS threads, but GIL prevents true parallel execution
+  Only 1 Python thread executes at a time (even on multi-core!)
+  GIL released during I/O → I/O threads run in parallel
+  GIL NOT released during CPU work → no parallel CPU computation!
+
+  Fix for CPU-bound:
+    multiprocessing module → separate processes (each with own GIL)
+    C extensions (numpy, pandas) → release GIL for their work
+
+GO (goroutines with M:N scheduling):
+  OS view: Go creates N OS threads (GOMAXPROCS, default = num_cores)
+  Millions of goroutines → scheduled onto N OS threads by Go runtime
+  When goroutine blocks on syscall → runtime parks it, runs another goroutine
+
+  OS thread usage:
+    GOMAXPROCS=4 → 4 OS threads (4 CPU cores utilized in parallel)
+    Network I/O: Go uses non-blocking + runtime netpoller (epoll-based)
+    File I/O: uses thread pool (blocks OS thread, runtime uses another)
+```
+
+## 17.3 Containers & OS Interaction
+
+```
+CONTAINER = process with extra isolation (not a VM!)
+  A Docker container is just:
+  - A process (or group of processes) with:
+    namespaces: isolated PID, network, mount, hostname
+    cgroups:    limited CPU, memory, I/O
+
+Docker "run ubuntu bash" is actually:
+  OS: fork() → new process
+  OS: clone() with CLONE_NEWPID, CLONE_NEWNET, CLONE_NEWNS flags → new namespaces
+  OS: cgroup apply limits (e.g., max 0.5 CPU, max 512MB RAM)
+  OS: pivot_root() → container sees different filesystem root
+  Result: process thinks it's alone in a fresh Linux system!
+
+KEY INSIGHT: Container shares the HOST OS KERNEL
+  Host kernel: Linux 6.1
+  Container "ubuntu 20.04": just ubuntu userspace files
+  Kernel = same Linux 6.1
+  → No kernel isolation! (unlike VMs)
+  → Kernel exploits affect ALL containers on host!
+  → Container processes appear in host's `ps aux` (with different PID mapping)
+
+RESOURCE LIMITS (cgroups):
+  docker run --cpus=0.5 → container gets max 50% of 1 CPU
+  docker run --memory=512m → container max 512MB RAM
+  
+  OS enforcement:
+    CPU: cgroup CFS quota/period (e.g., 50000µs quota per 100000µs period = 50%)
+    Memory: cgroup memory.limit_in_bytes (exceed → OOM killer within container!)
+
+JVM IN CONTAINER:
+  Problem: JVM reads host /proc/cpuinfo and total RAM → allocates huge heap!
+  Container has 512MB limit, JVM sees 32GB host RAM → allocates 24GB heap → OOM!
+
+  Fix (Java 8u131+ / Java 10+):
+    -XX:+UseContainerSupport       # JVM respects container limits (DEFAULT in Java 11+)
+    -XX:MaxRAMPercentage=75.0      # use max 75% of container memory for heap
+  
+  Verify:
+    docker run --memory=512m my-java-image java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
+    # Should show ~384MB (75% of 512MB), not 24GB!
+
+VIEWING CONTAINER RESOURCE USAGE:
+  # From host:
+  docker stats                    # live resource usage per container
+  cat /sys/fs/cgroup/memory/docker/<id>/memory.usage_in_bytes  # current memory
+  cat /sys/fs/cgroup/cpu/docker/<id>/cpuacct.usage             # CPU time used
+  
+  # From inside container:
+  cat /sys/fs/cgroup/memory/memory.limit_in_bytes  # my memory limit
+  nproc                           # number of CPUs available to me
+  cat /proc/cpuinfo | grep processor | wc -l       # same
+
+CONTAINER NETWORKING:
+  Container has virtual network interface (veth pair)
+  One end in container namespace (eth0), other end in host namespace
+  Docker bridge (docker0): software switch connecting all containers
+  Port mapping (-p 8080:8080): iptables rule on host redirects traffic
+
+  Network performance impact:
+    Container-to-container (same host): ~10Gbps via virtual bridge (fast!)
+    Container-to-host: virtual ethernet, ~10Gbps
+    External traffic: iptables NAT overhead (~5-10% latency cost)
+```
+
+---
+
+# 18. Memory Debugging — Practical for Developers
+
+## 18.1 Identifying Memory Leaks
+
+```bash
+# ── TOOLS ──
+
+# Valgrind (C/C++ programs):
+valgrind --leak-check=full --show-leak-kinds=all ./myprogram
+# Detects: heap leaks, use-after-free, buffer overflows, uninitialized memory
+
+# AddressSanitizer (compile-time):
+gcc -fsanitize=address -g ./myprogram.c -o myprogram
+./myprogram
+# Much faster than valgrind! Detects same issues + more
+
+# Java Memory Leak Detection:
+# 1. Watch heap over time:
+jstat -gcutil 1234 5000 | awk '{print $5}'   # Old gen % every 5s
+# If Old gen grows steadily → memory leak!
+
+# 2. Heap dump analysis:
+jcmd 1234 GC.heap_dump /tmp/heap.hprof
+# Analyze with Eclipse Memory Analyzer (MAT):
+#   Dominator tree → biggest memory consumers
+#   "Leak suspects" report → likely leak candidates
+
+# 3. Common Java memory leaks:
+#   Static collections growing forever:
+#     static List<Request> audit = new ArrayList<>();  ← never cleared!
+#   Unclosed resources (before Java 7 try-with-resources):
+#     InputStream is = new FileInputStream("file");
+#     // forgot to close! → stays open, leak
+#   Event listeners not removed:
+#     button.addActionListener(handler);  // handler held in listener list forever
+#   ThreadLocal not removed after thread pool reuse:
+#     ThreadLocal<Context> ctx = new ThreadLocal<>();
+#     ctx.set(value);  // forgot ctx.remove() → value lives as long as thread!
+#   Inner class holding outer class reference:
+#     class Outer { class Inner { } }  // Inner holds implicit ref to Outer!
+
+# ── MEMORY GROWTH PATTERNS ──
+# Linear growth over time → Classic leak (collection or event listener growing)
+# Sawtooth pattern → Normal (GC collecting, then growing again)
+# Plateau at high level → Large object kept alive but not leaking
+# Sudden spike → One-time large allocation (bulk data load)
+
+# Watch heap in real time:
+watch -n 1 "jcmd 1234 GC.heap_info 2>/dev/null | grep -E 'used|capacity'"
+```
+
+## 18.2 Thread Safety Issues in Practice
+
+```java
+// ── OS-LEVEL PERSPECTIVE ON THREAD SAFETY ──
+
+// WHAT THE OS GUARANTEES:
+// - Atomic reads/writes of ALIGNED native types ≤ machine word size (x86: 8 bytes)
+//   long/double on 64-bit: single instruction → atomic at machine level
+//   But: Java memory model requires 'volatile' for visibility across cores!
+// - Context switch can happen between ANY two instructions
+
+// WHAT THE OS DOES NOT GUARANTEE:
+// - Ordering of memory writes seen by other CPUs (CPU reordering, store buffers)
+// - Cache coherency timing (your write may not be visible for nanoseconds)
+// - Atomicity of compound operations (check-then-act, read-modify-write)
+
+// JAVA THREADING MODEL on top of OS:
+// Java Thread → OS Thread (1:1 on modern JVM)
+// java.util.concurrent → built on OS primitives (futex on Linux)
+// synchronized → maps to OS mutex (futex_wait / futex_wake syscalls)
+// volatile → memory barrier instructions (mfence, lfence, sfence on x86)
+
+// ── COMMON OS-VISIBLE THREAD ISSUES ──
+
+// 1. CPU SPIN in Java (burns CPU cycles, visible as high %us):
+while (!flag) { }  // busy-wait: thread spinning at 100% core!
+// OS: thread never yields CPU (RUNNABLE continuously)
+// Fix: use wait/notify or LockSupport.park()
+
+// 2. LOCK CONTENTION (high context switch rate):
+// Too many threads competing for same synchronized block
+// OS: threads block, wake, context switch repeatedly
+// Visible: high context switches in vmstat 'cs' column
+// pidstat -w 1 -p <pid>  → high nvcsw (involuntary context switches)
+
+// 3. PRIORITY INVERSION:
+// Low-priority thread holds lock that high-priority thread needs
+// Medium-priority thread preempts low-priority thread indefinitely
+// High-priority thread starved waiting for lock!
+// OS behavior: scheduler runs medium > low, but high waits for low
+// Fix: priority inheritance (OS mutex feature), or avoid priority mixing
+
+// 4. THREAD STARVATION (OS scheduling issue):
+// ThreadPoolExecutor with work queue: unbounded queue fills up
+// Threads all busy, tasks queuing indefinitely
+// OS view: thread count stable (pool saturated), queue growing in heap
+// Diagnosis: queue size via ThreadPoolExecutor.getQueue().size()
+// Fix: bounded queue + rejection policy (CallerRunsPolicy = backpressure!)
+
+// PRACTICAL THREAD SAFETY RULES FOR JAVA DEVELOPERS:
+// ✅ Use java.util.concurrent collections (ConcurrentHashMap, BlockingQueue)
+// ✅ Use AtomicInteger/Long for counters instead of synchronized int
+// ✅ volatile for single-variable flags (stop flags, initialized flag)
+// ✅ synchronized for compound operations (check-then-act)
+// ✅ ThreadLocal for per-thread state (DB connections, request context)
+// ✅ Minimize lock scope (hold locks as briefly as possible)
+// ❌ Never call blocking I/O inside synchronized block
+// ❌ Never lock on this (exposes internal lock to callers)
+// ❌ Never use double-checked locking without volatile
+```
+
+---
+
+## 📎 Updated Quick Reference — Developer Focus
+
+```
+SIMPLE TERMS:
+  Process:    isolated running program (own memory, resources)
+  Thread:     worker inside a process (shared memory, own stack)
+  RAM:        fast working memory (programs live here while running)
+  Swap:       slow fake-RAM on disk (bad for performance!)
+  File:       name → inode (metadata) → data blocks on disk
+  inode:      file's ID card (permissions, size, timestamps, block pointers)
+
+INSPECT PROCESSES:
+  ps aux              snapshot of all processes
+  top / htop          live view of processes + CPU/memory
+  pgrep -a java       find Java PIDs
+  lsof -i :8080       what's using port 8080?
+
+INSPECT MEMORY:
+  free -h             RAM overview ("available" column = what you can use)
+  cat /proc/PID/status  process memory details (VmRSS = actual RAM)
+  vmstat 1            memory + swap movement (si/so ≠ 0 = PROBLEM!)
+  dmesg | grep oom    check if OOM killer fired
+
+INSPECT CPU:
+  vmstat 1            load, runnable (r column), context switches (cs)
+  uptime              load average (compare to nproc)
+  iostat -x 1         disk I/O bottleneck detection (%util, await)
+
+PERMISSIONS:
+  ls -la              see rwx for owner/group/others
+  chmod 755           rwxr-xr-x (common for scripts)
+  chmod 644           rw-r--r-- (common for files)
+  chmod 600           rw------- (private files like SSH keys)
+  namei -l path       debug permission denied for full path
+  id                  your current groups
+
+PERFORMANCE DIAGNOSIS:
+  load > nproc:       CPU overloaded — too many runnable threads
+  %wa high:           disk I/O bottleneck — slow storage or too much I/O
+  si/so nonzero:      system swapping — need more RAM!
+  cs high in vmstat:  too many context switches — too many threads!
+  FD exhaustion:      ulimit -n 65536 to fix
+
+JAVA-SPECIFIC:
+  -XX:+UseContainerSupport    MUST have in containers (correct heap size)
+  -XX:MaxRAMPercentage=75     heap = 75% of container memory
+  jstat -gcutil PID 1000      watch GC live (FGC = full GC count)
+  jstack PID                  thread dump (find CPU-burning threads)
+  jmap -histo:live PID        object histogram (find memory leaks)
+
+CONTAINERS:
+  Container = process + namespaces + cgroups (NOT a VM!)
+  Shares HOST kernel
+  docker stats               live resource per container
+  OOM inside container:      dmesg or docker logs for killed process
+```
+
+---
+
+*Học theo thứ tự: Basic Terms (14) → Process/Thread (3,5) → Memory (6,7) → File System (9) → Inspect Practically (15) → Performance Diagnosis (16) → OS Impact on App (17) → Deep Internals (2,4,8,10,11,12,13)*
